fixed footer fish  + no hover on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@ html {
 html.dark {
   --color-bg: #000000;
   --color-text: #E0D9D4;
-  --color-link: #7AF870;
+  --color-link: #92ff7a;
   --color-text-muted: #7d7d7d;
 }
 
